# OpenGlBase

./: .gitignore  CMakeLists.txt  README.md  build-and-run.ps1  build.ps1  debug.ps1
.github/agents/: documentation.agent.md  python-dti-mri-preprocessor.agent.md  qt-gui.agent.md  qt-project-setup.agent.md
.github/prompts/: plan-UniformProvider.prompt.md  plan-cameraMovement.prompt.md
.github/workflows/: build-release-branch.yml
assets/volumes/: demo_matrix3x3.vxa  demo_scalar.vxa
docs/: app-frame-sequence-diagram.mmd  citations.md  drawable-class-diagram.mmd  graphics-pipeline-root-class-diagram.mmd  gui-layer-class-diagram.mmd  preprocessing-pipeline-runner-class-diagram.mmd  preprocessing-runner-sequence-diagram.mmd  scene-render-sequence-diagram.mmd  uniform-provider-class-diagram.mmd  volume-class-diagram.mmd
include/: GameObject.h  IDrawable.h  Material.h  Mesh.h  Scene.h  Shader.h
include/Camera/: Camera.h  PerspectiveCamera.h
include/Geometry/: CubeGeometry.h  Geometry.h  ImportedGeometry.h  ModelLoader.h  QuadGeometry.h  Triangle.h
include/Gui/: GuiRenderContext.h  GuiRoot.h  GuiTheme.h  Inspectable.h  SceneFramebuffer.h
include/Gui/panels/: GUIPanel.h  PanelRegistry.h  RuntimeControlsPanel.h  ScenePanel.h
include/Gui/widgets/: FieldWidgets.h  IWidget.h
include/Light/: DirectionalLight.h  Light.h  PointLight.h
include/Movement/: BaseMovement.h  FpsCameraMovement.h
include/Preprocessing/: MriPreprocessingPipeline.h  MriPreprocessingStages.h
include/Preprocessing/stages/: DWIScalarSynthesisStage.h  DWISkullExtractionStage.h
include/Scene/: Scene.h
include/Texture/: Skybox.h  Texture2D.h  Texture3D.h  TextureCube.h
include/Uniform/: CompositeUniformProvider.h  TypedUniformProvider.h
include/Volume/: DTIVolume.h  FloatVolume.h  Mat3Volume.h  UInt16Volume.h  UInt8Volume.h  Volume.h  VolumeData.h  VolumeFileLoader.h  VolumeGeometry.h  VolumeGpuEncoder.h  VolumeObject.h  VolumeRenderSettings.h  VolumeSeriesData.h  VolumeTextureSet.h
include/core/: DtiVolumeScene.h
include/core/Preprocessing/: MriPreprocessingPipeline.h  MriPreprocessingRunner.h  MriPreprocessingStages.h  MriToDtiPreprocessor.h  MriTractographySettings.h
include/engine/: GameObject.h  IDrawable.h  Material.h  Mesh.h  Shader.h
include/engine/Camera/: BaseMovement.h  Camera.h  InspectionCameraMovement.h  PerspectiveCamera.h
include/engine/Geometry/: CubeGeometry.h  Geometry.h  ImportedGeometry.h  QuadGeometry.h  StreamlineGeometry.h  Triangle.h  VolumeGeometry.h
include/engine/Light/: DirectionalLight.h  Light.h  PointLight.h
include/engine/Scene/: DtiVolumeScene.h  Scene.h
include/engine/Texture/: Skybox.h  Texture.h  Texture2D.h  Texture3D.h  TextureCube.h
include/engine/Uniform/: CompositeUniformProvider.h  TypedUniformProvider.h  UniformProvider.h
include/engine/Volume/: DTIVolume.h  FloatVolume.h  Volume.h  VolumeData.h  VolumeFileLoader.h  VolumeSeriesData.h  VolumeTextureSet.h
include/ui/mediator/: IInspectWidget.h  InspectBoolField.h  InspectColorField.h  InspectDropdownField.h  InspectField.h  InspectNumericField.h  InspectProvider.h  InspectTextField.h  InspectVec3Field.h
include/ui/qt-adapters/: InspectQtAdapter.h  QtInspectionMovement.h  QtSceneWindow.h
include/ui/widgets/: DTIViewportWidget.h  InspectorWidget.h  SceneObjectListWidget.h  WidgetsMainWindow.h
scripts/: run_hd_bet.py
shaders/: fragment.glsl  mandelbulb_fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  streamline_fragment.glsl  streamline_vertex.glsl  vertex.glsl  volume_fragment.glsl  volume_matrix_eigen_fragment.glsl  volume_vertex.glsl
shaders/dti_fragment_shaders/: volume_dti_direction_raymarch_fragment.glsl  volume_dti_ev_slice_fragment.glsl  volume_dti_fa_raymarch_fragment.glsl  volume_dti_mask_slice_fragment.glsl  volume_dti_surface_lit_fragment.glsl  volume_dti_tensor_fragment.glsl
src/: main.cpp
src/app/: main.cpp
src/core/: DtiVolumeScene.cpp
src/core/preprocessing/: MriPreprocessingPipeline.cpp  MriPreprocessingRunner.cpp  MriTractographySettings.cpp
src/engine/: GameObject.cpp  Material.cpp  Mesh.cpp  Scene.cpp  Shader.cpp
src/engine/Camera/: Camera.cpp  InspectionCameraMovement.cpp  PerspectiveCamera.cpp
src/engine/Geometry/: CubeGeometry.cpp  Geometry.cpp  ImportedGeometry.cpp  ModelLoader.cpp  QuadGeometry.cpp  StreamlineGeometry.cpp  Triangle.cpp  TubeGeometry.cpp  VolumeGeometry.cpp
src/engine/Light/: DirectionalLight.cpp  Light.cpp  PointLight.cpp
src/engine/Movement/: FpsCameraMovement.cpp
src/engine/Scene/: DtiVolumeScene.cpp  Scene.cpp
src/engine/Texture/: Skybox.cpp  Texture.cpp  Texture2D.cpp  Texture3D.cpp  TextureCube.cpp
src/engine/Uniform/: CompositeUniformProvider.cpp  TypedUniformProvider.cpp  UniformProvider.cpp
src/engine/Volume/: DTIVolume.cpp  FloatVolume.cpp  Mat3Volume.cpp  UInt16Volume.cpp  UInt8Volume.cpp  Volume.cpp  VolumeData.cpp  VolumeFileLoader.cpp  VolumeObject.cpp  VolumeSeriesData.cpp  VolumeTextureSet.cpp
src/gui/: GuiRoot.cpp  GuiTheme.cpp  SceneFramebuffer.cpp  UIRenderer.cpp
src/gui/panels/: PanelRegistry.cpp  RuntimeControlsPanel.cpp  ScenePanel.cpp
src/gui/widgets/: FieldWidgets.cpp
src/preprocessing/: MriPreprocessingPipeline.cpp
src/preprocessing/preprocessors/: MriToDtiPreprocessor.cpp
src/preprocessing/stages/: DWIBrainSurfaceMeshStage.cpp  (+4 more)
(+27 files in other folders)
